Cleanup: Replace the number 0 with the word zero.

--- a/documentation/fss_basic_list_read.html
+++ b/documentation/fss_basic_list_read.html
@@ -342,13 +342,13 @@
                   <dt class="dt">object</dt><dd class="dd">Apply delimits for Objects.</dd>
                 </div>
                 <div class="di">
-                  <dt class="dt">A number, 0 or greater</dt><dd class="dd">apply delimits for Content at the specified depth.</dd>
+                  <dt class="dt">A number, zero or greater</dt><dd class="dd">apply delimits for Content at the specified depth.</dd>
                 </div>
                 <div class="di">
-                  <dt class="dt">A number, 0 or greater, followed by a +</dt><dd class="dd">(such as '1+') apply delimits for Content at the specified depth and any greater depth (numerically).</dd>
+                  <dt class="dt">A number, zero or greater, followed by a +</dt><dd class="dd">(such as '1+') apply delimits for Content at the specified depth and any greater depth (numerically).</dd>
                 </div>
                 <div class="di">
-                  <dt class="dt">A number, 0 or lesser, followed by a -</dt><dd class="dd">(such as '1-') apply delimits for Content at the specified depth and any lesser depth (numerically).</dd>
+                  <dt class="dt">A number, zero or lesser, followed by a -</dt><dd class="dd">(such as '1-') apply delimits for Content at the specified depth and any lesser depth (numerically).</dd>
                 </div>
               </dl>
               <p>
