--- a/fll/specifications/fss/fss-0001.html
+++ b/fll/specifications/fss/fss-0001.html
@@ -100,7 +100,7 @@
                 <li><code class="code">\n</code> = Newline.</li>
                 <li><code class="code">*</code> = Zero or more occurrences.</li>
                 <li><code class="code">+</code> = One or more occurrences.</li>
-                <li><code class="code">()*</code> = Grouping that repeats 0 or more times.</li>
+                <li><code class="code">()*</code> = Grouping that repeats zero or more times.</li>
               </ul>
               <p>
                 Before Structure:
