--- a/fll/specifications/iki/iki-0002.html
+++ b/fll/specifications/iki/iki-0002.html
@@ -154,8 +154,8 @@
                   <li><code class="code">\x</code> = any character.</li>
                   <li><code class="code">\W</code> = any non-word character, discluding <code class="code">_</code>, <code class="code">-</code>, <code class="code">+</code> (and Unicode equivalents).</li>
                   <li><code class="code">\e</code> = an optional escape sequence of any number of backslashes, such as <code class="code">\</code>.</li>
-                  <li><code class="code">*</code> = 0 or more occurrences.</li>
-                  <li><code class="code">~</code> = one or more occurrences, or 0 if at start of file.</li>
+                  <li><code class="code">*</code> = zero or more occurrences.</li>
+                  <li><code class="code">~</code> = one or more occurrences, or zero if at start of file.</li>
               </ul>
               <p>
                 Before Structure:
