--- a/fll/specifications/fss/fss-0003.html
+++ b/fll/specifications/fss/fss-0003.html
@@ -80,9 +80,9 @@
             <div class="section-content">
               <p>
                 Each Object starts at the beginning of a line and white space to the left of the Object is not treated as an object.
-                An open-brace <code class="code">{</code> followed by any white space until a newline terminates a possible valid Object.
-                An Object is not considered fully valid until a valid close-brace <code class="code">}</code> is found, designating the end of the Content.
-                Non-white space may not follow the open-brace of a valid Object.
+                An open-brace <code class="code">{</code> (<code class="code">U+007B</code>) followed by any white space until a newline terminates a possible valid Object.
+                An Object is not considered fully valid until a valid close-brace <code class="code">}</code> (<code class="code">U+007D</code>) is found, designating the end of the Content.
+                Non-white space printable characters may not follow the open-brace of a valid Object.
               </p>
               <p>
                 Content is represented as a single Content column of every line following a valid object until the end of file (or string) or until a non-delimited close-brace <code class="code">}</code>.
@@ -107,8 +107,8 @@
               </p>
               <ul>
                 <li><code class="code">\s</code> = White space, except newline.</li>
-                <li><code class="code">\o</code> = Any printable character, except unescaped <code class="code">{</code>.</li>
-                <li><code class="code">\l</code> = Any printable character or white space, except unescaped <code class="code">}</code>.</li>
+                <li><code class="code">\o</code> = Any printable character, except unescaped <code class="code">{</code> (<code class="code">U+007B</code>).</li>
+                <li><code class="code">\l</code> = Any printable character or white space, except unescaped <code class="code">}</code> (<code class="code">U+007D</code>).</li>
                 <li><code class="code">\c</code> = Either white space or printable, including newline, that is not interpretable as an Object.</li>
                 <li><code class="code">\n</code> = Newline.</li>
                 <li><code class="code">*</code> = Zero or more occurrences.</li>
