--- a/fll/specifications/fss/fss-000b.html
+++ b/fll/specifications/fss/fss-000b.html
@@ -79,7 +79,7 @@
 
             <div class="section-content">
               <p>
-                This might be similar to <code class="code">fss-0008 (Embedded List)</code>, except it is an <code class="code">fss-0003 (Extended List)</code> with a (non-recursive) <code class="code">fss-0002 (Basic List)</code> inside the Content.
+                This is similar to <code class="code">fss-0008 (Embedded List)</code>, except it is an <code class="code">fss-0003 (Extended List)</code> with a (non-recursive) <code class="code">fss-0002 (Basic List)</code> inside the Content.
               </p>
               <p>
                 See the <a href="fll/specifications/fss/fss-0002.html" class="link">fss-0002 (Basic List)</a> and <a href="fll/specifications/fss/fss-0003.html" class="link">fss-0003 (Extended List)</a> specifications for details on the syntax rules.
