--- a/fll/specifications/fss/fss-0001.html
+++ b/fll/specifications/fss/fss-0001.html
@@ -82,7 +82,7 @@
                 Each Object starts at the beginning of a line and white space to the left of the Object is not treated as an object.
                 White space separates an Object from the Content.
                 An Object may be followed by a newline, in which case means that the Object has no Content.
-                If only printing white space follows a valid Object, that Object is considered to have no Content.
+                If only printing white spaces or non-printable characters follow a valid Object, then that Object is considered to have no Content.
               </p>
               <p>
                 Content exists on the same line as the Object.
