Bugfix: Incorect "rel" link attributes, extra white space, and incorrect title.
A number of pages have "rel" link attributes that they should not or have incorrect href pages.

Update the FSS and IKI specifications to utilize "next" and "prev" "rel" link attributes.
Some of the FSS Specifications (partially) have the wrong title on the page.

--- a/fll/specifications/fss/fss-000b.html
+++ b/fll/specifications/fss/fss-000b.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>FLL - Specifications - FSS-000B (Simple List)</title>
@@ -27,6 +27,8 @@
     <link type="image/x-icon" rel="icon" href="images/kevux.ico">
     <link type="image/x-icon" rel="shortcut" href="images/kevux.ico">
     <link type="text/html" rel="license" href="licenses.html">
+    <link type="text/html" rel="prev" href="fll/specifications/fss/fss-000a.html">
+    <link type="text/html" rel="next" href="fll/specifications/fss/fss-000c.html">
   </head>
 
   <body id="kevux" class="kevux no-js fll specifications">
