--- a/distributions.html
+++ b/distributions.html
@@ -27,7 +27,8 @@
     <link type="image/x-icon" rel="icon" href="images/kevux.ico">
     <link type="image/x-icon" rel="shortcut" href="images/kevux.ico">
     <link type="text/html" rel="license" href="licenses.html">
-    <link type="text/html" rel="next" href="distributions.html">
+    <link type="text/html" rel="prev" href="index.html">
+    <link type="text/html" rel="next" href="fll.html">
   </head>
 
   <body id="kevux" class="kevux no-js distributions">
