--- a/distributions/turtle/documentation.html
+++ b/distributions/turtle/documentation.html
@@ -27,7 +27,7 @@
     <link type="image/x-icon" rel="icon" href="images/kevux.ico">
     <link type="image/x-icon" rel="shortcut" href="images/kevux.ico">
     <link type="text/html" rel="license" href="licenses.html">
-    <link type="text/html" rel="next" href="distributions.html">
+    <link type="text/html" rel="next" href="distributions/turtle/changelog.html">
   </head>
 
   <body id="kevux" class="kevux no-js documentation">
