--- a/distributions/turtle/documentation/installing.html
+++ b/distributions/turtle/documentation/installing.html
@@ -28,7 +28,8 @@
     <link type="image/x-icon" rel="icon" href="images/kevux.ico">
     <link type="image/x-icon" rel="shortcut" href="images/kevux.ico">
     <link type="text/html" rel="license" href="licenses.html">
-    <link type="text/html" rel="next" href="distributions.html">
+    <link type="text/html" rel="prev" href="distributions/turtle/documentation/running.html">
+    <link type="text/html" rel="next" href="distributions/turtle/documentation/configuring.html">
   </head>
 
   <body id="kevux" class="kevux no-js distributions">
