--- a/distributions/turtle/documentation/servers.html
+++ b/distributions/turtle/documentation/servers.html
@@ -27,8 +27,8 @@
     <link rel="canonical" href="distributions/turtle/documentation/servers.html">
     <link type="image/x-icon" rel="icon" href="images/kevux.ico">
     <link type="image/x-icon" rel="shortcut" href="images/kevux.ico">
-    <link type="text/html" rel="license" href="licenses.html">
-    <link type="text/html" rel="next" href="distributions.html">
+    <link type="text/html" rel="prev" href="distributions/turtle/documentation/configuring.html">
+    <link type="text/html" rel="next" href="distributions/turtle/documentation/additional.html">
   </head>
 
   <body id="kevux" class="kevux no-js distributions">
