--- a/fll/specifications/fss/fss-0000.html
+++ b/fll/specifications/fss/fss-0000.html
@@ -27,6 +27,7 @@
     <link type="image/x-icon" rel="icon" href="images/kevux.ico">
     <link type="image/x-icon" rel="shortcut" href="images/kevux.ico">
     <link type="text/html" rel="license" href="licenses.html">
+    <link type="text/html" rel="next" href="fll/specifications/fss/fss-0001.html">
   </head>
 
   <body id="kevux" class="kevux no-js fll specifications">
