--- a/fll/specifications/fss/fss-0002.html
+++ b/fll/specifications/fss/fss-0002.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>FLL - Specifications - FSS-0000 (Basic List)</title>
+    <title>FLL - Specifications - FSS-0002 (Basic List)</title>
 
     <base href="../../../">
 
@@ -27,6 +27,8 @@
     <link type="image/x-icon" rel="icon" href="images/kevux.ico">
     <link type="image/x-icon" rel="shortcut" href="images/kevux.ico">
     <link type="text/html" rel="license" href="licenses.html">
+    <link type="text/html" rel="prev" href="fll/specifications/fss/fss-0001.html">
+    <link type="text/html" rel="next" href="fll/specifications/fss/fss-0003.html">
   </head>
 
   <body id="kevux" class="kevux no-js fll specifications">
