Update: Separate contexts between news and index page and add additional message to access denied page.
Have the links go to news.html rather than the site index.
If for some reason the news page and the site index ever change, then these links do not need to be changed.

Some links are intended to got to the site index, such as the access denied and not found pages.
Most other links are intended to go to the news page.

--- a/access_denied.html
+++ b/access_denied.html
@@ -33,7 +33,7 @@
 
       <div class="nav-block">
         <nav id="kevux-site-nav" class="nav-menu">
-          <div class="nav-item"><a href="index.html" class="nav-text link">News</a></div>
+          <div class="nav-item"><a href="news.html" class="nav-text link">News</a></div>
           <div class="nav-item"><a href="distributions.html" class="nav-text link">Distributions</a></div>
           <div class="nav-item"><a href="fll.html" class="nav-text link">FLL</a></div>
           <div class="nav-item"><a href="projects.html" class="nav-text link">Projects</a></div>
@@ -46,7 +46,7 @@
       <div id="nav-expanded" class="nav-block">
         <nav id="kevux-document-nav" class="nav-menu">
           <div class="nav-item block back">
-            <a href="index.html" class="nav-text link back">News</a>
+            <a href="news.html" class="nav-text link back">News</a>
           </div>
           <div class="nav-item block back">
             <a href="distributions.html" class="nav-text link back">Distributions</a>
@@ -74,7 +74,7 @@
 
           <div class="main-content">
             <p>
-              Please go back or <a href="index.html" class="nav-text link">consider visiting to the News page</a>.
+              You are not authorized to access this page whether it exists or not. Please go back or <a href="index.html" class="nav-text link">consider visiting to the site index page</a>.
             </p>
           </div>
         </main>
