--- a/distributions.html
+++ b/distributions.html
@@ -27,7 +27,7 @@
     <link type="image/x-icon" rel="icon" href="images/kevux.ico">
     <link type="image/x-icon" rel="shortcut" href="images/kevux.ico">
     <link type="text/html" rel="license" href="licenses.html">
-    <link type="text/html" rel="prev" href="index.html">
+    <link type="text/html" rel="prev" href="news.html">
     <link type="text/html" rel="next" href="fll.html">
   </head>
 
@@ -39,7 +39,7 @@
 
       <div class="nav-block">
         <nav id="kevux-site-nav" class="nav-menu">
-          <div class="nav-item"><a href="index.html" class="nav-text link">News</a></div>
+          <div class="nav-item"><a href="news.html" class="nav-text link">News</a></div>
           <div class="nav-item active"><a href="distributions.html" class="nav-text link">Distributions</a></div>
           <div class="nav-item"><a href="fll.html" class="nav-text link">FLL</a></div>
           <div class="nav-item"><a href="projects.html" class="nav-text link">Projects</a></div>
