--- a/documentation.html
+++ b/documentation.html
@@ -38,7 +38,7 @@
 
       <div class="nav-block">
         <nav id="kevux-site-nav" class="nav-menu">
-          <div class="nav-item"><a href="index.html" class="nav-text link">News</a></div>
+          <div class="nav-item"><a href="news.html" class="nav-text link">News</a></div>
           <div class="nav-item"><a href="distributions.html" class="nav-text link">Distributions</a></div>
           <div class="nav-item"><a href="fll.html" class="nav-text link">FLL</a></div>
           <div class="nav-item"><a href="projects.html" class="nav-text link">Projects</a></div>
