--- a/news.html
+++ b/news.html
@@ -23,7 +23,7 @@
     <link type="text/css" rel="stylesheet" media="only print and (orientation:landscape)" href="css/kevux-print-landscape.css">
     <link type="text/css" rel="stylesheet" media="only print and (orientation:portrait)" href="css/kevux-print-portrait.css">
 
-    <link rel="canonical" href="index.html">
+    <link rel="canonical" href="news.html">
     <link type="image/x-icon" rel="icon" href="images/kevux.ico">
     <link type="image/x-icon" rel="shortcut" href="images/kevux.ico">
     <link type="text/html" rel="license" href="licenses.html">
@@ -38,7 +38,7 @@
 
       <div class="nav-block">
         <nav id="kevux-site-nav" class="nav-menu">
-          <div class="nav-item active"><a href="index.html" class="nav-text link">News</a></div>
+          <div class="nav-item active"><a href="news.html" class="nav-text link">News</a></div>
           <div class="nav-item"><a href="distributions.html" class="nav-text link">Distributions</a></div>
           <div class="nav-item"><a href="fll.html" class="nav-text link">FLL</a></div>
           <div class="nav-item"><a href="projects.html" class="nav-text link">Projects</a></div>
@@ -70,8 +70,8 @@
             <a href="sources.html" class="nav-text link">Source Code</a>
           </div>
           <div class="nav-item block ellipses">
-            <a href="index.html#nav-expanded" class="nav-text link open" title="Expand Menu">…</a>
-            <a href="index.html" class="nav-text link close">Collapse Menu</a>
+            <a href="news.html#nav-expanded" class="nav-text link open" title="Expand Menu">…</a>
+            <a href="news.html" class="nav-text link close">Collapse Menu</a>
           </div>
         </nav>
       </div>
