Update: News - 2022 / 06 / 04 - Librem to Freedom Added.
Prepare sources.html for another packaged release.

Includes minor cleanup ins documentation.html.

--- a/news.html
+++ b/news.html
@@ -51,6 +51,10 @@
       <div id="nav-expanded" class="nav-block">
         <nav id="kevux-document-nav" class="nav-menu">
           <div class="nav-item block">
+            <div class="nav-text notice">2022 / 06 / 04</div>
+            <a href="news/2022_06_04-librem_to_freedom.html" class="nav-text link">Librem to Freedom</a>
+          </div>
+          <div class="nav-item block">
             <div class="nav-text notice">2022 / 05 / 16</div>
             <a href="news/2022_05_16-fll_specifications_added.html" class="nav-text link">FLL Specifications Added</a>
           </div>
@@ -84,7 +88,32 @@
 
           <article class="article">
             <header class="article-header header">
-              <h2 class="article-title h h2">2022 / 05 / 16 - FLL Specifications Added</h2>
+              <h2 class="article-title h h2">2022 / 06 / 04 - Librem to Freedom</h2>
+            </header>
+
+            <div class="article-content" id="2022_06_04-librem_to_freedom">
+              <img src="images/news/2022_06_04/00-side_by_side-400.png" alt="OpenMoko FreeRuner, Ubuntu Aquaris E4.5, Pinephone Postmarket Edition, and Librem5 phones." title="Linux phones." class="image content title">
+              <p>
+                I am a hacker, a tinkerer, one who likes to modify things into what I desire. I don't want somebody to do anything for me. I want to do anything for myself. While this does not mean I want to do everything, this does mean that want I want to do, I am the one to do it. In this case, I want to tweak and configure and use my phone as I see fit. Open-source gives me the opportunity to review, vet, and configure my computers as I see fit. Liberty such as this is the air that fills my lungs as I sleep at night, dreaming.
+              </p>
+              <p>
+                When I first discovered I could have a phone that respects my freedom, my privacy, and my liberty, I was ecstatic. I don't have to be weigh down by horrible interfaces, horrible software, and horrible flexibility that other people like or otherwise think is a good idea. I would have the opportunity to tweak and adjust the ideas as I see fit within my own personal tolerances and willingness to put the effort in.
+              </p>
+              <p>
+                I supported several phones over years, such as the <strong>OpenMoko Freerunner</strong>, an embarrassing failure in the community to the leap forward pioneered by the <strong>Unbuntu Aquaris</strong>. Many of these phones ultimately failed or faded into the night due to a hostile industry, market, and regulations. The <strong>Librem5</strong> from <a href="https://puri.sm/" class="link external">Purism</a> has now stepped up to the plate, learned from the past mistakes, and delivered a phone that, while not complete or ideal, lives up to their standards and has thus far survived numerous, and blatant, hostile industry actions and economic disasters.
+              </p>
+              <p>
+                I finally have my <strong>Librem5</strong>. I have had to quite painfully, if not patiently, wait for my phone to actually be shipped years late (due to global economic situations). This is my review after having used the phone with respect to the other open-source phones I have used, namely the <strong>Pinephone</strong> from <a href="https://www.pine64.org/" class="link external">Pine64</a>. I have discovered good things, bad things, horrible things, and great things about this phone.
+              </p>
+              <p>
+                <a href="news/2022_06_04-librem_to_freedom.html" class="content link">Continue reading…</a>
+              </p>
+            </div>
+          </article>
+
+          <article class="article" id="2022_05_16-fll_specifications_added">
+            <header class="article-header header separate">
+              <h2 class="article-title h h2">2022 / 06 / 04 - Librem to Freedom</h2>
             </header>
 
             <div class="article-content">
@@ -100,7 +129,7 @@
             </div>
           </article>
 
-          <article class="article">
+          <article class="article" id="2022_05_06-basic_program_documentation">
             <header class="article-header header separate">
               <h2 class="article-title h h2">2022 / 05 / 06 - Basic Program Documentation</h2>
             </header>
@@ -118,7 +147,7 @@
             </div>
           </article>
 
-          <article class="article">
+          <article class="article" id="2022_05_01-website_redesign">
             <header class="article-header header separate">
               <h2 class="article-title h h2">2022 / 05 / 01 - Website Redesign</h2>
             </header>
