Update: Add additional information on how where to find this source repository.

--- a/sources.html
+++ b/sources.html
@@ -152,6 +152,14 @@
               <ul>
                 <li><a href="documents/website/2022/kevux.org-2022_06_04.tar.gz" class="link download">kevux.org (2022/06/04)</a> (<a href="documents/website/2022/kevux.org-2022_06_04.tar.sha256" class="link download">SHA256</a>) (<a href="documents/website/2022/kevux.org-2022_06_04.tar.sign" class="link download">PGP</a>)</li>
               </ul>
+              <p>
+                Most of the changes for this website are also made publicly available through repositories hosted on third-party websites and services.
+                To see a history of all of the changes or get the latest version of the website, visit any of these repositories.
+              </p>
+              <ul>
+                <li><a href="https://github.com/thekevinday/kevux.org-website" class="link external">https://github.com/thekevinday/kevux.org-website</a></li>
+                <li><a href="https://gitlab.com/kevuxer/kevux.org-website" class="link external">https://gitlab.com/kevuxer/kevux.org-website</a></li>
+              </ul>
             </div>
           </article>
         </main>
